# meeting-recorder-app

./: CHANGELOG.md  LICENSE  PACKAGING_RECOMMENDATION.md  README.md  RELEASE.md  meeting-recorder  pyproject.toml
.github/workflows/: ci.yml
docs/design/v0.7.0/: approved-ui-direction.html
docs/plans/: 2026-06-04-professional-v0.2.0.md
docs/release-evidence/: v0.5.3-signoff.md  v0.6.0-signoff.md  v0.7.0-signoff.md  v0.7.1-signoff.md  v0.7.2-signoff.md
scripts/: __init__.py  build_release_assets.py
src/meeting_recorder/: __init__.py  ai_export.py  audio_monitor.py  cli.py  gui.py  gui_models.py  library.py  modern_ui.py  obsidian.py  organizer.py  recorder.py  settings.py  status.py  summarizer.py  transcription.py  tray.py
tests/: test_ai_export.py  test_cli_commands.py  test_cli_parser.py  test_gui_entrypoint.py  test_gui_models.py  test_library.py  test_metadata.py  test_modern_gui_models.py  test_modern_ui.py  test_obsidian.py  test_obsidian_security.py  test_organizer.py  test_recorder.py  test_release_assets.py  test_settings.py  test_status.py  test_summarizer.py  test_transcription.py  test_tray_backend.py
