[project]
name = "meeting-recorder-app"
version = "0.2.0"
description = "Privacy-first local Linux meeting recorder for screen/audio capture, organization, transcription fallback, and summaries"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Meeting Recorder Maintainers"}]
dependencies = []

[project.scripts]
meeting-recorder = "meeting_recorder.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
