[project]
name = "meeting-recorder-app"
version = "0.3.0"
description = "Privacy-first local Linux meeting recorder with modern recorder UI, screen/audio capture, Obsidian export, local transcription fallback, and summaries"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Meeting Recorder Maintainers"}]
dependencies = []

[project.scripts]
meeting-recorder = "meeting_recorder.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
