[project]
name = "meeting-recorder-app"
version = "0.4.1"
description = "Privacy-first local Linux meeting recorder with audio-first system capture, compact dropdown UI, Obsidian export, local transcription fallback, and summaries"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Meeting Recorder Maintainers"}]
dependencies = []

[project.scripts]
meeting-recorder = "meeting_recorder.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
